removed overflows and fixed scroll again

--- a/style.css
+++ b/style.css
@@ -3,13 +3,16 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
+
+
+
   html, body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     width: 100%;
     height: 100%;
-    overflow:hidden;
+    
     color: white;
+    
   }
   
   .overlay {
@@ -18,7 +21,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
   }
   
   .img {
@@ -56,7 +58,7 @@
     justify-content: center;
     width: 95%;
     height: 100%;
-    overflow: hidden;
+    
   }
   
   
